Centrando contenido para mobile

--- a/estilo.css
+++ b/estilo.css
@@ -672,6 +672,11 @@
         /* *********************/
         
         @media screen and (max-width: 800px) {
+            
+            .resaltador {
+                color: var(--main-color);
+            }
+            
             .redes {
                 display: none;
             }
@@ -734,6 +739,14 @@
             #sobremi .contenedor-foto img {
                 padding: 8px;
             }
+
+            .sobremi {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-between;
+            }
+
             #sobremi .sobremi .titulo-seccion {
                 text-align: center;
             }
@@ -763,7 +776,12 @@
             /* seccion PORTFOLIO */
             #portfolio {
                 padding: 50px 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: space-evenly;
             }
+
             #portfolio .fila {
                 display: block;
                 margin: 10px;
@@ -773,12 +791,15 @@
             }
 
             #portfolio .logo {
-                margin-left: 10px;
+                display: inline-block;
+                margin-left: auto;
+                margin-right: auto;
+
             }
 
             #portfolio .intercambios {
-                margin-left: 3px;
                 padding: 5px 1px;
+                display: inline-block;
             }
 
 
