--- a/estilo.css
+++ b/estilo.css
@@ -165,6 +165,10 @@
         /* *********************/
         /* seccion S O B R E  M I */
         /* *********************/
+
+        .resaltador {
+            color: var(--main-color);
+        }
         
         #sobremi {
             max-width: 1100px;
@@ -721,6 +725,7 @@
                 font-size: 13px;
             }
 
+
             #inicio .contenido .presentacion a {
                 text-align: center;
                 padding: 8px;
@@ -776,23 +781,28 @@
             /* seccion PORTFOLIO */
             #portfolio {
                 padding: 50px 0;
-                display: flex;
                 flex-direction: column;
                 align-items: center;
-                justify-content: space-evenly;
+
             }
 
             #portfolio .fila {
                 display: block;
                 margin: 10px;
+                margin-bottom: 0;
             }
+
+            #portfolio .fila2 {
+                margin-top: 0;
+            }
+
             #portfolio .fila .proyecto {
-                margin: 10px auto;
+                margin: 1rem auto;
             }
 
             #portfolio .logo {
                 display: inline-block;
-                margin-left: auto;
+                margin-left: 70px;
                 margin-right: auto;
 
             }
