--- a/estilo.css
+++ b/estilo.css
@@ -781,7 +781,6 @@
             /* seccion PORTFOLIO */
             #portfolio {
                 padding: 50px 0;
-                display: flex;
                 flex-direction: column;
                 align-items: center;
 
@@ -798,12 +797,12 @@
             }
 
             #portfolio .fila .proyecto {
-                margin: 10px auto;
+                margin: 1rem auto;
             }
 
             #portfolio .logo {
                 display: inline-block;
-                margin-left: auto;
+                margin-left: 70px;
                 margin-right: auto;
 
             }
