--- a/estilo.css
+++ b/estilo.css
@@ -804,6 +804,7 @@
 
             #portfolio .intercambios {
                 margin-left: 0px;
+                display: inline;
             }
 
             #portfolio .descripcion {
